# ToF_camera_simulator

./: .gitignore  CMakeLists.txt  README.md  git_push.sh
data/mech12_pcd/: objectlist
data/mech12_pcd/12cam_origin_1000_norm/test/: data.npy
data/mech12_pcd/12cam_origin_1000_norm/train/: data.npy
data/mech12_pcd/12cam_origin_1000_norm/train/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+2360 more)
data/mech12_pcd/3cam_origin_1000_norm/test/: data.npy
data/mech12_pcd/3cam_origin_1000_norm/test/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+1160 more)
data/mech12_pcd/3cam_origin_1000_norm/train/: data.npy
data/mech12_pcd/3cam_origin_1000_norm/train/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+2361 more)
data/mech12_pcd/3cam_origin_1000_norm_10_error/test/: data.npy
data/mech12_pcd/3cam_origin_1000_norm_10_error/test/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+1161 more)
data/mech12_pcd/3cam_origin_1000_norm_10_error/train/: data.npy
data/mech12_pcd/3cam_origin_1000_norm_10_error/train/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+2360 more)
data/mech12_pcd/3cam_origin_1000_norm_5_error/test/: data.npy
data/mech12_pcd/3cam_origin_1000_norm_5_error/test/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+1160 more)
data/mech12_pcd/3cam_origin_1000_norm_5_error/train/: data.npy
data/mech12_pcd/3cam_origin_1000_norm_5_error/train/pcd/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+2360 more)
data/mech12_stl/: bearing_a.stl  bearing_b.stl  blade_a.stl  compressor_housing_a.stl  compressor_housing_b.stl  filelist  m3_socket.stl  m6_hex.stl  m6_nut.stl  macrolist  turbine_housing_a.stl  turbine_housing_b.stl  wastegate.stl
include/sim_kinect/: cgal_utils.h  cv_utils.h  eigen_utils.h  interaction_utils.h  model_utils.h  objectKinect.h  pcl_utils.h  std_utils.h
src/: 14_cam_ycb.cpp  cgal_main.cpp  full_cam.cpp  full_cam_D200.cpp  full_cam_D500.cpp  full_cam_assembly.cpp  full_cam_macro.cpp  hello.cpp  kinectSimulator.cpp  main.cpp  main_kinect.cpp  main_kinect_origin.cpp  noiseutils.cpp  pcd_filtering.cpp  read_stl.cpp  sample_assembly.cpp  test_code.cpp  three_cam.cpp  three_cam_D200.cpp  three_cam_D500.cpp  three_cam_assembly.cpp  three_cam_macro.cpp
